--- a/style.css
+++ b/style.css
@@ -99,10 +99,6 @@ header .scrim {
   text-decoration: underline;
 }
 
-.book_now {
-  color: gold !important;
-}
-
 #logo {
   filter: drop-shadow(1px 1px black);
   height: auto;
@@ -132,6 +128,7 @@ main h2 {
   font-family: "Handwriting";
   text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.2);
   font-size: 3em;
+  font-weight: normal;
   margin-bottom: 0.5em;
 }
 
@@ -150,7 +147,7 @@ main h2 {
   padding: 1rem;
   border-radius: 1rem;
   text-decoration: none;
-  color: var(--light);
+  color: var(--light) !important;
   text-align: center;
 }
 
@@ -292,6 +289,15 @@ footer a {
   padding: 1rem;
 }
 
+#tripadvisor {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 1rem;
+}
+
 #copyright a,
 #copyright a:hover,
 #copyright a:visited,
@@ -319,4 +325,49 @@ footer a {
   flex-direction: row;
   gap: 1rem;
   margin-bottom: 0.5rem;
+}
+
+/* Contact Us */
+
+#map {
+  width: 100%;
+  height: 480px;
+  margin-top: 1rem;
+}
+
+.contact_row2 {
+  margin-bottom: 0.5rem;
+}
+
+/* Activities Packages */
+.activities {
+  margin-bottom: 1rem;
+  margin-left: 2rem;
+}
+
+a,
+a:visited {
+  text-decoration: none;
+  color: var(--highlight);
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.book_now {
+  color: gold !important;
+}
+
+#tripAdvisor {
+  margin-top: 1rem;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hidden {
+  overflow: hidden;
+  height: 0px;
 }
